// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalStack renders default VerticalStack correctly 1`] = `
<div
  className=
      ms-VerticalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-top: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`VerticalStack renders gap correctly 1`] = `
<div
  className=
      ms-VerticalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-top: 5px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`VerticalStack renders growing items correctly 1`] = `
<div
  className=
      ms-VerticalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-top: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`VerticalStack renders item alignments correctly 1`] = `
<div
  className=
      ms-VerticalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-top: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          align-self: auto;
          flex-shrink: 0;
        }
  >
    Auto
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: stretch;
          flex-shrink: 0;
        }
  >
    Stretch
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: baseline;
          flex-shrink: 0;
        }
  >
    Baseline
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-start;
          flex-shrink: 0;
        }
  >
    Start
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: center;
          flex-shrink: 0;
        }
  >
    Center
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-end;
          flex-shrink: 0;
        }
  >
    End
  </span>
</div>
`;

exports[`VerticalStack renders shrinking items correctly 1`] = `
<div
  className=
      ms-VerticalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:not(:empty) ~ * {
        margin-top: 0px;
      }
      & > *:empty {
        display: none;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 1;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 2
  </span>
</div>
`;
